# lvgl_lottie_example

./: CMakeLists.txt  partitions.csv
components/espressif__esp-box/: esp-box.c
components/rlottie/: 0001-changes-to-compile-with-esp-idf.patch
main/: CMakeLists.txt  image_display.c
